--- a/styles/style.css
+++ b/styles/style.css
@@ -31,14 +31,21 @@ input:focus {
     outline: none;
 }
 
-/* ? Header is too big */
+/*  TODO: Tab header scroll down */
 .tab-header {
+    position: fixed;
     width: 100%;
-    height: 120px;
+    height: 90px;
     background-color: var(--primary-blue);
+    opacity: 0;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
+    transition: opacity .7s;
     display: flex;
     align-items: center;
+}
+
+.tab-header:hover {
+    opacity: 1;
 }
 
 .project-icon {
@@ -78,23 +85,28 @@ input:focus {
 }
 
 /* Title Section */
-/* ? Title card is too big */
-/* TODO: Setup horizontal scroll */
 main {
     height: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
+    display: flex;
+    align-items: center;
+}
+
+main::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
 }
 
 .title-list {
-    margin-left: 60px;
-    margin-top: 60px;
+    height: 90%;
     display: flex;
 }
 
 .title {
-    height: 720px;
+    height: 100%;
     width: 480px;
+    margin: 0 60px;
     border-radius: 25px;
     overflow: hidden;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
@@ -330,15 +342,48 @@ main {
     align-self: center;
 }
 
-/* TODO: Redo icons with pure css */
 .menu-icon {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: var(--secondary-black);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
     position: fixed;
     bottom: 60px;
     left: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-icon:hover {
+    cursor: pointer;
+}
+
+.menu-icon > img {
+    width: 60px;
+    height: 60px;
 }
 
 .plus-icon {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: var(--secondary-black);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
     position: fixed;
     bottom: 60px;
     right: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.plus-icon:hover {
+    cursor: pointer;
+}
+
+.plus-icon > p {
+    font-size: 96px;
+    color: white;
 }
